--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         }
     ],
     "support": {
-
+        "source": "https://github.com/octobercms/october"
     },
     "require": {
         "php": ">=7.0",
